Change name index and change style.css

--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
           </p>
           <form action="#" name="newform" method="post">
             <div class="form_inputs">
-              <p>Name <span class="red">*</span><input type="text" /></p>
+              <p> Name <span class="red">*</span><input type="text"></p>
               <p>
-                Email address <span class="red">*</span><input type="text" />
+                Email address <span class="red">*</span><input type="text">
               </p>
             </div>
             <p>Message<span class="red">*</span></p>
