Modify burger menu and inputs for mobile version

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyCompany</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+
   </head>
   <body>
     <header>
@@ -240,7 +242,7 @@
                 Email address <span class="red">*</span><input type="text">
               </p>
             </div>
-            <p>Message<span class="red">*</span></p>
+            <p class="message">Message<span class="red">*</span></p>
             <textarea name="text"></textarea>
             <div class="button_block">
               <input type="submit" value="SEND" />
